--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <title>Assignment Solution of Module 2</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" type="text/css" href="CSS/style.css">
 
 </head>
 <body>
