--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Assignment Module-3</title>
-    <link rel="stylesheet" href="Assignment module-3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="Assignment module-3/css/style3.css">
+    <link rel="stylesheet" href="Assignment Module-3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="Assignment Module-3/css/style3.css">
 	 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
