--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <title>Module 4 Solution Starter</title>
-  <script src="Assignment Module-4/SpeakHello.js"></script>
-  <script src="Assignment Module-4/SpeakGoodBye.js"></script>
-  <script src="Assignment Module-4/script.js"></script>
+  <script src="Assignment Module-4\SpeakHello.js"></script>
+  <script src="Assignment Module-4\SpeakGoodBye.js"></script>
+  <script src="Assignment Module-4\script.js"></script>
 </head>
 <body>
   <h1>Module 4 Solution Starter</h1>
